--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,3 @@
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 #aaa {
   background-color: #000000;
   color: #ffffff;
@@ -45,6 +13,35 @@
   text-align: center;
 }
 
+.killedCircle{
+  height: 80px;
+  width: 80px;
+  border-radius: 50%;
+  background-color: green;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.killedCircle > span {
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+/* Styling for call outs */
+.intro {
+  font-size: 20px;
+}
 .fairy {
   color: aqua;
+}
+
+.defense {
+  font-weight: 500;
+  font-size: 25px;
+}
+
+.damage {
+  color: red;
 }
