--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
+body{
+  font-family: 'Share Tech Mono', monospace !important;
+}
+
 #aaa {
   background-color: #000000;
   color: #ffffff;
-  height: 45vh;
+  height: 40vh;
   overflow-y: scroll;
 }
 
@@ -26,15 +30,28 @@
 .bg {
   background-image: url(./assets/bg.png);
   background-size: 100% 100%;
+  height: 100vh;
 }
 
 .counter {
   background-color: #B2E8FF;
 }
 
+.rpgButton {
+  border: 1px solid #000099 !important;
+  border-radius: 0px !important;
+  font-weight: bold !important;
+}
+
+.modalCustom {
+  background-color: black !important;
+  color: white;
+}
+
 .killedCircle{
   height: 80px;
   width: 80px;
+  border: 1px solid black;
   border-radius: 50%;
   background-color: green;
   display: flex;
